# An-Obstacle-Game

./: CMakeLists.txt  README.md  a.out  collectible.cpp  game.h  main.cpp  obstacle.cpp  obstacle.h  player_controller.cpp  player_controller.h  screen.cpp  screen.h
include/: FileManager.h  board_generator.h  collectible.h  game.h  my_exceptions.h  obstacle.h  player.h  player_controller.h  screen.h
src/: FileManager.cpp  board_generator.cpp  collectible.cpp  game.cpp  main.cpp  obstacle.cpp  player.cpp  player_controller.cpp  screen.cpp
